fix scrollbar-x

--- a/src/components/ChatWindow/ChatWindow.module.scss
+++ b/src/components/ChatWindow/ChatWindow.module.scss
@@ -5,7 +5,6 @@
     grid-template-areas: 'head' 'main';
     grid-template-columns: 74.8vw;
     grid-template-rows: 60px 1fr;
-    overflow-y: hidden;
     
 
     &__header{
